# nrf-esl-bluetooth

./: LICENSE  README.rst
docs/: .buildinfo  additional_resources.html  additional_resources.rst  conf.py  environment_setup.html  environment_setup_240.html  environment_setup_240.rst  esl.html  esl_ap.html  esl_ap_sample_description.html  esl_ap_sample_description.rst  esl_ap_sample_description_240.html  esl_ap_sample_description_240.rst  esl_ap_subcommands.html  esl_ap_subcommands.rst  esl_service.html  (+14 more)
samples/peripheral_esl/: CMakeLists.txt  Kconfig  sample.yaml
samples/peripheral_esl/conf/nrf21540dk_nrf52840/: prj.conf  prj_release.conf
samples/peripheral_esl/conf/nrf52833dk_nrf52833/: nrf52833dk_nrf52833_1in54b_v2_epd.conf  nrf52833dk_nrf52833_2in13_epd.conf  nrf52833dk_nrf52833_2in13_epd.overlay  nrf52833dk_nrf52833_2in13_epd_lfs.conf  nrf52833dk_nrf52833_2in13_epd_lfs.overlay  nrf52833dk_nrf52833_2in13_v4_epd.conf  nrf52833dk_nrf52833_2in13b_epd.conf  nrf52833dk_nrf52833_2in13b_epd.overlay  nrf52833dk_nrf52833_2in13b_v3_epd.conf  nrf52833dk_nrf52833_2in9b_v3_epd.conf  nrf52833dk_nrf52833_4in2_epd.conf  nrf52833dk_nrf52833_4in2_epd.overlay  nrf52833dk_nrf52833_4in2_epd_lfs.conf  nrf52833dk_nrf52833_4in2_v2_epd.conf  nrf52833dk_nrf52833_4in2_v2_epd.overlay  nrf52833dk_nrf52833_4in2_v2_epd_lfs.conf  nrf52833dk_nrf52833_4in2_v2_epd_lfs.overlay  nrf52833dk_nrf52833_b2in13_epd.conf  nrf52833dk_nrf52833_b2in13_epd.overlay  nrf52833dk_nrf52833_b2in13_epd_lfs.conf  nrf52833dk_nrf52833_b2in13_epd_lfs.overlay  nrf52833dk_nrf52833_b4in2_epd.conf  nrf52833dk_nrf52833_b4in2_epd.overlay  nrf52833dk_nrf52833_b4in2_epd_lfs.conf  nrf52833dk_nrf52833_b4in2_epd_lfs.overlay  nrf52833dk_nrf52833_general_epd.overlay  nrf52833dk_nrf52833_power_profiler_release_epd.conf  nrf52833dk_nrf52833_power_profiler_release_led.conf  nrf52833dk_nrf52833_release_epd.overlay  nrf53833dk_nrf52833_4in2_epd.overlay  power_profiler.conf  power_profiler.overlay  prj.conf  prj_release.conf
samples/peripheral_esl/conf/nrf52833dk_nrf52833/child_image/mcuboot/boards/: nrf52833dk_nrf52833.conf  nrf52833dk_nrf52833.overlay
samples/peripheral_esl/conf/nrf52840dk_nrf52840/: nrf52840dk_nrf52840_4in2_epd.conf  nrf52840dk_nrf52840_4in2_epd_lfs.conf  nrf52840dk_nrf52840_4in2_epd_lfs.overlay  nrf52840dk_nrf52840_epd.overlay  prj.conf  prj_epd.conf  prj_no_ext.conf  prj_release.conf
samples/peripheral_esl/conf/nrf52840dongle_nrf52840/: prj.conf  prj_release.conf
samples/peripheral_esl/conf/nrf52dk_nrf52832/: nrf52dk_nrf52832_4in2_epd_lfs.conf  nrf52dk_nrf52832_4in2_epd_lfs.overlay  nrf52dk_nrf52832_epd.conf  nrf52dk_nrf52832_epd.overlay  prj.conf  prj_release.conf
samples/peripheral_esl/conf/nrf54l15dk_nrf54l15_cpuapp/: nrf54l15dk_nrf54l15_2in13_epd.conf  nrf54l15dk_nrf54l15_2in13_epd.overlay  prj.conf  prj_release.conf
samples/peripheral_esl/conf/thingy52_nrf52832/: prj.conf  prj_release.conf
samples/peripheral_esl/driver/EPD/: CMakeLists.txt  DEV_Config.c  DEV_Config.h  EPD_1in54b_V2.c  EPD_1in54b_V2.h  EPD_2in13_V4.c  EPD_2in13_V4.h  EPD_2in13b_V3.c  EPD_2in13b_V3.h  EPD_2in9b_V3.c  EPD_2in9b_V3.h  EPD_4in2.c  EPD_4in2.h  EPD_4in2_V2.c  EPD_4in2_V2.h  EPD_5in83_V2.c  EPD_5in83_V2.h  EPD_5in83b_V2.c  EPD_5in83b_V2.h  Kconfig
samples/peripheral_esl/dts/: waveshare_epaper_HINK-E0213-G01.dtsi  waveshare_epaper_WFT0420CZ15.dtsi  waveshare_epaper_common_b.dtsi
samples/peripheral_esl/dts/bindings/: vendor-prefixes.txt
samples/peripheral_esl/dts/bindings/drivers/: generic,epd.yaml
samples/peripheral_esl/hw/: esl_hw_impl.h  esl_nfc_impl.c  esl_nfc_impl.h  esl_vs_impl.c  esl_vs_impl.h
samples/peripheral_esl/hw/display/: cfbv_1016.h  epd_display.c  epd_shield_display.c  epd_shield_uc81xx_display.c
samples/peripheral_esl/hw/display/paint_lib/: Kconfig  font12.c  font16.c  font20.c  font24.c  font8.c  jfpaint.c  paint.c
samples/peripheral_esl/hw/display/paint_lib/include/: fonts.h  jfpaint.h  paint.h
samples/peripheral_esl/hw/led/: dummy_led.c
samples/peripheral_esl/hw/storage/: dummy.c  lfs.c  nvs.c
samples/peripheral_esl/src/: main.c
(+67 files in other folders)
